--- a/Translations/German/text-religion-change.xml
+++ b/Translations/German/text-religion-change.xml
@@ -1,8 +1,40 @@
 <Root>
-	<!--English Indices: Noun ~ Adjective ~ Indefinite & Adjective ~ Plural-->
+	<!--Translation Indices: Noun ~ Adjective ~ Indefinite & Adjective ~ Plural-->
 	<Entry>
 		<zType/>
 		<Translation/>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN</zType>
+		<Translation>Heidentum~Heide~ein Heide~Heiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN_ASSYRIA</zType>
+		<Translation>Assyrisches Heidentum~Assyrischer Heide~ein Assyrischer Heide~Assyrische Heiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN_BABYLONIA</zType>
+		<Translation>Babylonisches Heidentum~Babylonischer Heide~ein Babylonischer Heide~Babylonische Heiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN_CARTHAGE</zType>
+		<Translation>Karthagisches Heidentum~Karthagischer Heide~ein Karthagischer Heide~Karthagische Heiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN_EGYPT</zType>
+		<Translation>Ägyptisches Heidentum~Ägyptischer Heide~ein Ägyptsicher Heide~Ägyptische Heiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN_GREECE</zType>
+		<Translation>Griechisches Heidentum~Griechischer Heide~ein Griechischer Heide~Griechische Heiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN_ROME</zType>
+		<Translation>Römisches Heidentum~Römischer Heide~ein Römischer Heide~Römische Heiden</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_RELIGION_PAGAN_PERSIA</zType>
+		<Translation>Persisches Heidentum~Persischer Heide~ein Persischer Heide~Persische Heiden</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELIGION_ZOROASTRIANISM</zType>
@@ -21,7 +53,7 @@
 		<Translation>Manichäismus~Manichäer~ein Manichäer~Manichäer</Translation>
 	</Entry>
   <Entry>
-    <zType>TEXT_RELIGION_CUSTOM</zType>
-    <Translation>{RELIGION-NOUN}~{RELIGION-ADJECTIVE}~a(n) {RELIGION-ADJECTIVE}~{RELIGION-ADJECTIVE}(s)</Translation>
+		<zType>TEXT_RELIGION_CUSTOM</zType>
+		<Translation>{RELIGION-NOUN}~{RELIGION-ADJECTIVE}~a(n) {RELIGION-ADJECTIVE}~{RELIGION-ADJECTIVE}(s)</Translation>
   </Entry>
 </Root>
